# memora

./: .gitignore  CHANGELOG.md  CHECKPOINT-11.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml
.cursor/rules/: citation-and-privacy.mdc  claim-graph.mdc  memora-context.mdc  rust-standards.mdc  testing-and-commits.mdc
.github/pr-templates/: phase.md
.github/workflows/: ci.yml  pages.yml  release.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-28_18-35-06Z-memora-project-setup-instructions.md
benches/: Cargo.toml
benches/fixtures/: locomo_subset.jsonl
benches/wix/: main.wxs
crates/memora-cli/: Cargo.toml
crates/memora-cli/src/: config.rs  main.rs  runtime.rs
crates/memora-cli/src/commands/: challenge.rs  claims.rs  consolidate.rs  doctor.rs  index.rs  init.rs  mod.rs  privacy.rs  query.rs  serve.rs  watch.rs
crates/memora-cli/tests/: it_index.rs
crates/memora-cli/wix/: main.wxs
crates/memora-core/: Cargo.toml
crates/memora-core/migrations/: 0001_init.sql  0002_ack.sql  0003_consolidation_runs.sql  0004_claims_object_nullable.sql
crates/memora-core/src/: config.rs  indexer.rs  lib.rs  note.rs  scheduler.rs  vault.rs
crates/memora-core/src/answer/: mod.rs
crates/memora-core/src/challenger/: mod.rs  report.rs  scan.rs
crates/memora-core/src/cite/: answer.rs  mod.rs  parser.rs  validator.rs
crates/memora-core/src/claims/: contradict.rs  extractor.rs  mock.rs  mod.rs  privacy_markers.rs  provenance.rs  stale.rs  store.rs  types.rs
crates/memora-core/src/consolidate/: atlas.rs  mod.rs  prompts.rs  world_map.rs
crates/memora-core/src/embed/: local.rs  mod.rs  ollama.rs  openai.rs
crates/memora-core/src/index/: hnsw.rs  mod.rs  sqlite.rs
crates/memora-core/src/learn/: mod.rs  qvalue.rs
crates/memora-core/src/privacy/: filter.rs  mod.rs
crates/memora-core/src/retrieve/: hebbian.rs  hybrid.rs  mod.rs  spread.rs
crates/memora-core/tests/: it_challenger.rs  it_cite.rs  it_claims.rs  it_consolidate.rs  it_embed_search.rs  it_hybrid.rs  it_indexer.rs  it_privacy.rs  it_vault.rs
crates/memora-llm/: Cargo.toml
crates/memora-llm/src/: anthropic.rs  client.rs  lib.rs  ollama.rs  openai.rs
crates/memora-mcp/: Cargo.toml
crates/memora-mcp/src/: lib.rs  tools.rs
crates/memora-mcp/tests/: it_e2e.rs
crates/memora-mcp/wix/: main.wxs
docs/: architecture.md  book.toml  citation-protocol.md  comparison.md  llm-setup.md  mcp-tools.md  quickstart.md
docs/site/: index.html
docs/src/: SUMMARY.md  architecture.md  citation-protocol.md  comparison.md  introduction.md  license.md  mcp-tools.md  models.md  obsidian-guide.md  obsidian-properties-template.md  quickstart.md  vault-conventions.md
docs/theme/: custom.css
tests/fixtures/sample-vault/: world_map.md
tests/fixtures/sample-vault/.invalid/: missing-fm.md
tests/fixtures/sample-vault/.obsidian/: ignored.md
tests/fixtures/sample-vault/personal/: example.md
tests/fixtures/sample-vault/work/: _atlas.md  internorga.md  team-sync.md
