[workspace]
resolver = "2"
members = [
    "crates/memora-core",
    "crates/memora-llm",
    "crates/memora-mcp",
    "crates/memora-cli",
    "benches",
]

[workspace.package]
version = "0.1.22"
edition = "2021"
rust-version = "1.75"
authors = ["Rado"]
license = "Apache-2.0"
repository = "https://github.com/radotsvetkov/memora"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "sync", "signal", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
blake3 = "1"
rusqlite = { version = "0.31", features = ["bundled", "blob", "hooks"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
gray_matter = "0.2"
pulldown-cmark = "0.10"
walkdir = "2"
notify = "6"
regex = "1"
hnsw_rs = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.8"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
tempfile = "3"
mockito = "1"
assert_cmd = "2"
predicates = "3"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
