[package]
name = "memora-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
async-trait.workspace = true
blake3.workspace = true
memora-core = { path = "../memora-core" }
memora-llm = { path = "../memora-llm" }
