[package]
name = "memora-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "memora"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
async-trait.workspace = true
blake3.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true
toml.workspace = true
memora-core = { path = "../memora-core" }
memora-llm = { path = "../memora-llm" }
memora-mcp = { path = "../memora-mcp" }
rmcp = { version = "0.1", features = ["transport-io"] }

[dev-dependencies]
tempfile.workspace = true
