[package]
name = "memora-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
gray_matter.workspace = true
pulldown-cmark.workspace = true
walkdir.workspace = true
notify.workspace = true
regex.workspace = true
blake3.workspace = true
serde_yaml = "0.9"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
