[package]
name = "memora-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
local-embed = ["fastembed"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
gray_matter.workspace = true
pulldown-cmark.workspace = true
walkdir.workspace = true
notify.workspace = true
regex.workspace = true
blake3.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
hnsw_rs.workspace = true
bincode = "1.3"
reqwest.workspace = true
secrecy.workspace = true
memora-llm = { path = "../memora-llm" }
fastembed = { version = "4", optional = true }
serde_yaml = "0.9"
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
mockito.workspace = true
rand = "0.8"
