[package]
name = "memora-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
secrecy.workspace = true
chrono.workspace = true

[dev-dependencies]
mockito.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
