[package]
name = "memora-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.wix]
upgrade-guid = "AA2BED65-EB5E-4F1A-8CB6-A70CFDF6E781"
path-guid = "CC01C538-6ED1-4F4D-9341-C3BFF10420DC"
license = false
eula = false

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
blake3.workspace = true
memora-core = { path = "../memora-core" }
memora-llm = { path = "../memora-llm" }
rmcp = { version = "0.1", features = ["transport-io"] }

[dev-dependencies]
tempfile.workspace = true
